finished css and js 99%

--- a/index.html
+++ b/index.html
@@ -11,61 +11,64 @@
 <div id="body">
     <div id="container">
         <div id="display">
-            <h1>100</h1>
+            <h1 id="text">100</h1>
         </div>
         <div id="keys">
             <div id="rowOne">
-                <div id="one">
-                    <p>1</p>
-                </div>
-                <div id="two">
-                    <p>2</p>
-                </div>
-                <div id="three">
-                    <p>3</p>
-                </div>
-                <div id="divide">
-                    <p>÷</p>
-                </div>
+                <button value="1" id="one">
+                    1
+                </button>
+                <button value="2" id="two">
+                    2
+                </button>
+                <button value="3" id="three">
+                    3
+                </button>
+                <button value="÷" id="divide">
+                    ÷
+                </button>
             </div>
             <div id="rowTwo">
-                <div id="four">
-                    <p>4</p>
-                </div>
-                <div id="five">
-                    <p>5</p>
-                </div>
-                <div id="six">
-                    <p>6</p>
-                </div>
-                <div id="multiply">
-                    <p>x</p>
-                </div>
+                <button value="4" id="four">
+                    4
+                </button>
+                <button value="5" id="five">
+                    5
+                </button>
+                <button value="6" id="six">
+                    6
+                </button>
+                <button value="x" id="multiply">
+                    x
+                </button>
             </div>
                 <div id="rowThree">
-                    <div id="seven">
-                        <p>7</p>
-                    </div>
-                    <div id="eight">
-                        <p>8</p>
-                    </div>
-                    <div id="nine">
-                        <p>9</p>
-                    </div>
-                    <div id="subtract">
-                        <p>-</p>
-                    </div>  
+                    <button value="7" id="seven">
+                        7
+                    </button>
+                    <button value="8" id="eight">
+                        8
+                    </button>
+                    <button value="9" id="nine">
+                        9
+                    </button>
+                    <button value="-" id="subtract">
+                        -
+                    </button>  
                 </div>
                 <div id="rowFour">
-                    <div id="zero">
-                        <p>0</p>
-                    </div>
-                    <div id="equals">
-                        <p>=</p>
-                    </div>
-                    <div id="add">
-                        <p>+</p>
-                    </div>  
+                    <button value="0" id="zero">
+                        0
+                    </button>
+                    <button value="clear" id="clear">
+                        clear
+                    </button>
+                    <button value="=" id="equals">
+                        =
+                    </button>
+                    <button value="+" id="add">
+                        +
+                    </button>  
                 </div>
             </div>
         </div>
